Cleaned up benchmark classes and using the same settings in both.